--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <body>
     <div id="root"></div>
 
-    <div class="col-12 d-flex flex-column align-items-center text-center">
+    <div class="col-12 d-flex flex-column align-items-center text-center d-none">
       <div class="col-1 col-sm-10 bg-danger">
         sm
       </div>
